# error_remapper

./: Cargo.toml  README.en.md  README.md  idea.md  reports.md  spec.md
config/: errors.yaml  settings.toml
doc/: prompt.md  reports.md
java/: pom.xml
java/src/main/java/com/thothlab/remapper/: ErrorRemapper.java  Example.java
src/: config.rs  input.rs  lib.rs  main.rs  matcher.rs  output.rs  settings.rs
tests/: integration.rs
