[package]
name = "error-remapper"
version = "0.1.0"
edition = "2021"
description = "CLI utility for fuzzy matching and remapping backend error codes using a YAML dictionary"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
strsim = "0.11"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
